fixed layout problems, working on carousel restructure

--- a/assets/css/modules/image-module.css
+++ b/assets/css/modules/image-module.css
@@ -60,3 +60,6 @@
     .topimages {
       width: 100%;
     }
+    #carouselimage {
+      width: 100%;
+    }
